# bropilot

./: .env  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  docker-compose.yml  hello.py  main.py  main_service.py  plan.md  plan_00.md  pyproject.toml  requirements.txt  x-plan.md
.github/workflows/: ci.yml
config/: prometheus.yml
config/environments/: development.yaml  production.yaml  staging.yaml
core/: __init__.py  base.py  exceptions.py  interfaces.py
demo_workspace_advanced/test_cases/: 182dfbcd-639f-4ec1-9246-6cc23c41e46f.json  221581cf-9aa5-4a25-a882-d77f96a7ece6.json  7c489aab-253d-432b-b16b-ebcedd0426aa.json  b5e2cb84-1643-4390-9e01-42fb086031ae.json  bab6535d-9a00-476f-bc29-d726f8921231.json  cdbb3ab6-07d3-4c5f-b31e-1720aae0f137.json
deployment/: Dockerfile  docker-compose.yml
deployment/scripts/: entrypoint.sh  healthcheck.sh
docs/: README.md  advanced-llm-features-summary.md  api-reference.md  architecture-fixes-summary.md  architecture.md  coding_standards.md  consolidation-summary.md  developer-guide.md  phase1-implementation-summary.md  project_structure.md  quick-start.md  task-2.1-error-recovery-summary.md  user-guide.md  user-guide_tmp.html  uv-migration-complete.md  uv-setup-guide.md  validation-framework-summary.md
docs/developer/: api-reference.md  architecture.md  contributing.md  deployment.md  development-setup.md  performance.md  test-execution.md  testing.md
docs/operations/: backup-recovery.md  configuration.md  installation.md  monitoring.md  scaling.md  security.md
docs/testing/: README.md  complete-testing-workflow.md  framework-implementation-guide.md  quick-reference.md  test-case-creation-guide.md  test-execution-guide.md  test-suite-chaining-guide.md  testing-best-practices.md
docs/user/: dashboard.md  framework-usage.md  llm-integration.md  multimodal.md  quick-start.md  test-creation.md  test-data-management.md  test-execution.md  troubleshooting.md  user-guide.md  workflow-creation.md
examples/: advanced_llm_features_demo.py  basic_usage.py  complete_framework_demo.py  error_recovery_demo.py  validation_demo.py
scripts/: setup-uv.bat  setup-uv.sh  setup.sh  test_framework_capabilities.py  verify-setup.py
src/: __init__.py  test_automation_framework.py
src/analytics/: reporting_engine.py
src/api/: __init__.py  dependencies.py  main.py  main_service.py
src/execution/: __init__.py  browser_manager.py  enhanced_error_recovery.py  error_recovery.py  feature_flags.py  llm_abstraction.py  llm_provider.py  task_executor.py
src/infrastructure/: __init__.py  cost_management.py
src/intelligence/: advanced_orchestrator.py  error_recovery.py
src/llm/: conversation_manager.py  multimodal_processor.py
src/monitoring/: system_monitor.py
src/orchestration/: __init__.py  dependency_graph.py  load_balancer.py  parallel_executor.py  state_machine.py  state_manager.py  task_scheduler.py  transaction_manager.py  workflow_controller.py  workflow_engine.py
src/test_data/: __init__.py  generators.py  managers.py  models.py
src/test_management/: __init__.py  generators.py  llm_features.py  managers.py  models.py  repositories.py  services.py
src/test_reporting/: __init__.py  managers.py  models.py
src/validation/: __init__.py
tasks/: definitions.py
test_e2e_llm/test_cases/: 22405824-f64a-4e6c-91d5-93b35847e014.json  b74764fb-f8d4-4b01-93f6-ffa2ecbb429b.json
test_workspace_llm/test_cases/: 9640519c-f734-4077-bdcb-59fda84b8fb7.json  bcb554b5-359d-40aa-82f1-e86e0194ca62.json  e5831d60-f1ce-4b0a-8093-5f0382e2a4e8.json
test_workspace_maintenance/test_cases/: 11f20108-b242-4cf8-8e06-e2ff631df06b.json  4b1c1590-6423-4d0c-9792-6fb5506424e9.json  5521a8c1-f60b-407a-9306-bd5e36c00122.json  8bb191bb-c304-4802-b5dd-689262f8b81e.json  9da92497-55e0-4639-9ada-3295b97a1564.json  ba881412-2715-407c-b5d2-f01526034253.json  c70bb4e3-8260-46c9-bd72-2ae046881180.json  cb1768cc-0482-4ab1-86a6-a402f9a0b3af.json  e2c768a0-8d2f-4932-8d69-36facd52cce9.json  f7869c07-3b20-4e0d-a798-a4f4d48c93f7.json
tests/: README.md  run_comprehensive_tests.py  run_integration_tests.py  test_browser_integration.py  test_configuration_validation.py  test_execution_error_recovery.py  test_load_testing.py  test_performance_regression.py
tests/e2e/: test_complete_workflows.py
tests/integration/: __init__.py  test_advanced_orchestrator.py  test_execution_layer.py
tests/performance/: benchmark_suite.py
tests/test_automation_framework/: test_advanced_llm_features.py  test_framework_integration.py  test_test_case_management.py
tests/unit/: test_adapters.py  test_api.py  test_browser_manager.py  test_legacy_integration.py  test_llm_provider.py  test_orchestration.py  test_task_executor.py
utils/: llm_limiter.py  task_runner.py
workflows/: enhanced_workflow.py  sample_workflow.py
(+54 files in other folders)
