[project]
name = "browser-use-automation"
version = "0.1.0"
description = "Advanced browser automation platform with unified execution layer, cost management, and comprehensive monitoring"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Browser Use Automation Team"}
]
keywords = ["automation", "browser", "llm", "testing", "web-scraping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]

dependencies = [
    # Core dependencies
    "browser-use>=0.1.30",
    "playwright>=1.50.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",

    # LLM providers (core)
    "openai>=1.70.0",
    "anthropic>=0.40.0",
    "langchain>=0.3.20",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.20",
    "langchain-ollama>=0.2.0",
    "ollama>=0.4.0",

    # HTTP and async
    "httpx>=0.28.1",
    "aiohttp>=3.11.18",
    "aiolimiter>=1.2.1",
    "anyio>=4.9.0",

    # Data processing
    "beautifulsoup4>=4.13.4",
    "markdownify>=0.14.1",
    "python-dateutil>=2.9.0",
    "PyYAML>=6.0.2",

    # Utilities
    "typer>=0.15.4",
    "rich>=14.0.0",
    "click>=8.1.8",
    "python-dotenv>=1.1.0",
    "backoff>=2.2.1",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",

    # System monitoring (optional)
    "psutil>=5.9.0",

    # Database
    "SQLAlchemy>=2.0.40",

    # Token counting
    "tiktoken>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

google = [
    "google-generativeai>=0.7.0",
    "langchain-google-genai>=2.0.0",
]

monitoring = [
    "prometheus-client>=0.17.0",
    "grafana-api>=1.0.3",
]

testing = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "factory-boy>=3.2.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings>=0.22.0",
]

[project.urls]
Homepage = "https://github.com/your-org/browser-use-automation"
Documentation = "https://github.com/your-org/browser-use-automation/docs"
Repository = "https://github.com/your-org/browser-use-automation"
Issues = "https://github.com/your-org/browser-use-automation/issues"

[project.scripts]
browser-automation = "main:main"
task-runner = "utils.task_runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "utils", "core"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
source = ["src", "utils"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
